<resources>
    <string name="app_name">Age In Minutes</string>
    <string name="calculator_your">CALCULATE YOUR</string>
    <string name="age">AGE</string>
    <string name="in_minutes">IN MINUTES</string>
    <string name="button">Button</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
    <string name="selected_date">Selected Date</string>
    <string name="age_in_minutes">Age In Minutes</string>
    <string name="minutes">------------------</string>
    <string name="select_date">Select Date</string>
</resources>